[package]
name = "dataview"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wxdragon = { path = "../../../rust/wxdragon" }

[build-dependencies]
embed-manifest = "1.4.0"
