[package]
name = "gallery"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
env_logger = "0.11.8"
image = { version = "0.25.1", default-features = false, features = [
  "png",
  "gif",
] }
log = "0.4"
# Depend on the safe wrapper crate now
wxdragon = { path = "../../../rust/wxdragon", features = ["aui", "richtext"] }

[build-dependencies]
embed-manifest = "1.4"
embed-resource = "3.0.6"
serde_json = "1"

[package.metadata.bundle]
# Install cargo-bundle: cargo install cargo-bundle
# macOS Usage: cargo bundle --package gallery --format osx --target x86_64-apple-darwin
name = "gallery"
identifier = "com.github.AllenDang.wxDragon.gallery"
icon = ["asset/simple.png"]
category = "Utility"
short_description = "A gallery application for wxDragon"
long_description = """
A gallery application for wxDragon that showcases the capabilities of the wxDragon framework.
It allows users to view images in various formats, demonstrating the integration of the wxDragon framework with
the Rust programming language.
"""
