[package]
name = "neat_demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bitflags = "2.9.4"
dirs = "6.0"
env_logger = "0.11.8"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
wxdragon = { path = "../../../rust/wxdragon" }

[build-dependencies]
embed-manifest = "1.4"
embed-resource = "3.0.6"
